Fixed scrollbar

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -72,6 +72,10 @@ body,
   background: transparent !important;
 }
 
+.hidden-scrollbar::-webkit-scrollbar-track {
+  background: transparent !important;
+}
+
 /* width */
 .tag-filter-scroll::-webkit-scrollbar {
   height: 5px;
